css/main.css
@charset "utf-8";
@import url("../fonts/stylesheet.css");
/* changed on 13th May 2015 */



html {
	background-repeat: repeat;
	background-size: 80px auto;
	background-color: #D9DDF1;
}

a:link {
	text-decoration: none;
}
a:visited {
	text-decoration: none;
}

/*
# wapper #topwapper {
	list-style-type: none;
	padding-top: 0px;
	margin-top: 0px;
	width:100%;
	height:100%;
	display: block;
	position: relative;
	float:left;
}
/*
a {
	font-weight: bold;
}
a:link {
	text-decoration: none;
}
a:visited {
	text-decoration: none;
}
a:hover, a:active , a:focus{
	color: #7F3300;
	text-decoration: underline;
}
*/
/* Start of navigation */
#wapper # topwapper #mainnavigation  {
    width: 100%;
    background: #f0f0f0;
    border: 1px solid #ccc;
    border-right: none;
}
#mainnavigation ul {
	/*overflow: hidden;*/
    margin: 0;
    padding: 0;
	list-style-type: none;
	z-index: 999;
	/*width: 100%;*/
}
#mainnavigation ul li{
	list-style: none;
	float: left;
	text-align: center;
	width: 14.2857%; /* fallback for non-calc() browsers */
	box-sizing: border-box;
	position: relative;
	z-index: 999;
	display: block;
	height: 100%;
}
#mainnavigation a {
	display: block;
	text-decoration: none;
	color: #FFF;
	padding: 10px 0;
	vertical-align: middle;
	text-align: center;
	background-color: #2E2E2E;
	font-weight: 500;
	font-size: 2vw;
	font-family: "kruti_dev_640normal";
	background-repeat: no-repeat;
	background-image: url(../images/buttonBG.jpg);
	height: 100%;
}
#wapper #topwapper #mainnavigation {
	font-family: "kruti_dev_640normal";
}
#wapper #mainFooter {
	display: block;
	background-image: url(../images/repeatBG.jpg);
	background-size: auto auto;
	position: relative;
	float: left;
	width: 100%;
	background-repeat: repeat-x;
	font-family: "kruti_dev_700normal";
	text-decoration: none;
	/*font-style: italic;*/
	text-align: center;
	color: #FFFFFF;
	font-weight: 500;
	font-size: 1.5vw;
	letter-spacing: 150%;
}
#wapper #bottomwapper {
	float: left;
	overflow: hidden;
	width: 100%;
	height: 100%;
	position: relative;
}

@media (max-width: 800px) {
#mainnavigation a {
font-size: 3vw;
}
}

#mainnavigation a:hover   , #mainnavigation a:active, #mainnavigation a:focus, #mainnavigation a.thispage{
	text-decoration: none;
	background-color: #43A6CB;
}

#mainnavigation li {
	height: 100%;
}
#mainnavigation li > ul {
	display: none;
	position: absolute;
	height: 100%;
}

#mainnavigation li:hover > ul {
	display: block;
	height: 100%;
}

#mainnavigation ul li > ul li {
	position: relative;
	width: 100%;
	z-index: 9999;
	padding-top: 0px;
	height: 100%;
}

#mainnavigation li > ul li > ul {
	left: 100%;
	top: 0%;
	z-index: 9994;
	width: 100%;
	height: 100%;
}

#mainnavigation li > ul li > ul li{
	width: 100%;
	position: relative;
	left: 0%;
	z-index: 9993;
	height: 100;
}

#mainnavigation li:hover > a {
	background-color: #43A6CB;
	background-image: url(../images/hoverbuttonBG.jpg);
}
/* End of navigation */
#slideshow   {
	width:auto;
	height:auto;
	float: left;
	overflow: auto;
	margin-left: 40px;
	margin-right: 1px;
	display: block;
	position: relative;
	max-width: 900px;
	max-height: 650px;
}
#previous   {
	display: block;
	float: left;
	position: relative;
	z-index: 99;
}
#next   {
	display: block;
	float: right;
	position: relative;
	z-index: 99;
}
#slider {
	display: block;
	float: left;
	overflow: hidden;
	position: relative;
	margin-top: 10px;
}

#wapper #topwapper #mainheader {
	text-align: center;
	font-family: "kruti_dev_700normal";
	line-height: 40%;
	/*background-color: #86123E;*/
	padding-top: 1px;
	padding-bottom: 39px;
	width: 100%;
	position: relative;
	float: left;
	background-image: url(../images/headerBanner2.jpg);
	background-repeat: no-repeat;
	background-size: 100% auto;
	padding-right: 0px;
	margin-bottom: 0px;
	margin-top: -7px;
	margin-right: 6px;
}
.fixed {
	position: fixed; 
	top: 0; 
	height: 0px; 
	z-index: 9999;
	width: 100%;
	display: block;
}

#slideshow .cycle-overlay {
	position: relative;
	bottom: 0px;
	width: 100%;
	z-index: 600;
	background: none repeat scroll 0% 0% #000000;
	color: #EFB435;
	padding: 15px;
	opacity: 0.9;
}
#slideshow > img {
	/*min-width: 700px;*/
	/*min-height: 500px;*/
	width: auto;
	height: 90%;
	display: inline;
	overflow: hidden;
	position: relative;
	padding-top: 2px;
	/*max-width: 900px;
	max-height: 550px;*/
}

#mainheader #subheader2 h1 {
	color: #FFF;
	font-style: italic;
	font-variant: normal;
	font-weight: 900;
	font-size: 4vw;
	text-align: center;
	display: block;
}
#mainheader #subheader2 h5 {
	color: #FFF;
	font-style: italic;
	font-variant: normal;
	font-weight: 500;
	font-size: 1vw;
	text-align: center;
	display: block;
	margin-top: -8px;
	padding-bottom: 10px;
}
#mainheader #subheader1 h6 {
	color: #FFF;
	font-style: italic;
	font-variant: normal;
	font-weight: 100;
	font-size: 1vw;
	text-align: center;
	display: block;
	margin-bottom: -13px;
	margin-top: 6px;
	font-family: "kruti_dev_640normal";
}
#topwapper #mainheader #subheader1 {
	padding-bottom: 0px;

}
#topwapper #mainheader #subheader2 {
	display: block;
	padding-bottom: 0px;
	padding-top: 0px;
	margin-bottom: -54px;
	font-family: "kruti_dev_100regular";
	text-decoration: none;
	font-weight: 700;
	font-size: x-large;
	line-height: -23%;
	text-align: center;
}

#articles {
	display: block;
	float: left;
	text-align: center;
}
h3 {
	font-weight: 900;
	font-size: 400%;
	text-align: center;
	text-decoration: underline;
	text-indent: 0px;
	display:block;
}

#gcal {
	position: relative;
}
#wapper {
	width: 100%;
	height: 100%;
}

/* new slideshow CSS
@keyframes slidy {
0% { left: 0%; }
20% { left: 0%; }
25% { left: -100%; }
45% { left: -100%; }
50% { left: -200%; }
70% { left: -200%; }
75% { left: -300%; }
95% { left: -300%; }
100% { left: -400%; }
}
body, figure { 
  margin: 0; background: #101010;
  font-family: Istok Web, sans-serif;
  font-weight: 100;
}
*/
#bottomwapper #captioned-gallery {
	width: 65%;
	overflow: hidden;
	float: left;
	position: relative;
	margin-top: 2px;
}

@media (max-width: 800px) {
#bottomwapper #captioned-gallery { 
  width: 100%;
}
}

/* New */
.rslides {
  position: relative;
  list-style: none;
  overflow: hidden;
  width: 100%;
 /*height: 120%;*/
  padding: 0;
  margin: 0;
  }

.rslides li {
  -webkit-backface-visibility: hidden;
  position: absolute;
  display: none;
  width: 100%;
  left: 0;
  top: 0;
  }

.rslides li:first-child {
  position: relative;
  display: block;
  float: left;
  }

.rslides img {
  display: block;
  height: auto;
  float: left;
  width: 100%;
  border: 0;
  }
  .caption {
	position: absolute;
	bottom: 0%;
	background: rgba(0,0,0,0.9);
	color: #BBC4F3;
	width: 100%;
	font-size: 2.5vw;
	padding: .6rem;
	margin-bottom: 0px;
	font-family: "kruti_dev_700normal";
	text-decoration: none;
	font-weight: 500;
  }
/* End of responsive slideshow */
/* Start of responsive Cal */
#bottomwapper #gcalender {
	float: left;
	width: 33%;
	height: auto;
	position: relative;
	display: block;
	margin-left: 2px;
	margin-top: 2px;
}
@media (max-width: 800px) {
#bottomwapper #gcalender { 
  width: 100%;
}
#gcalender #gcal {
font-size: 2vw;
}
}

/* Subpages CSS file */

#subwapper{
	width: 100%;
	height: 100%;
	border: thick #000DFC 5px;
	display: block;
	-webkit-box-sizing: content-box;
	-moz-box-sizing: content-box;
	box-sizing: content-box;
	position: relative;
	background-repeat: no-repeat;
	overflow: hidden;
}

#subwapper > div {
	float: left;
	position:relative;
	overflow: hidden;
}

#leftimgpart{
	width: 100%;
	height: 100%;
	border: thin black;
	position: relative;
	display: block;
	background-image: url(../images/repeatarticleBGBlueLig.jpg);
	background-repeat: repeat;
	color: #0D1B3F;
	overflow: hidden;
}

#leftimgpart > h1 {
	font-family: "kruti_dev_700normal";
	text-decoration: none;
	margin-left: 1%;
	margin-right: 1%;
	overflow: hidden;
	font-size: 2.5vw;
}

.textWrapRight {
	float: right;
	margin: 10px;
	width: 35%;
	height: auto;
	overflow: hidden;
	border-width: 0.3vw;
	border-style: groove;
}

.textWrapLeft {
	float:left;
	margin: 10px;
	width: 35%;
	height: auto;
	overflow: hidden;
	border-width: 0.3vw;
	border-style: groove;
}

.articleText {
	font-size: 1.7vw;
	text-align: left;
	color: #2B0316;
	font-family: "kruti_dev_010regular";
	text-decoration: none;
	font-weight: 500;
	line-height: 110%;
	letter-spacing: 105%;
	margin-left: 2%;
	margin-right: 2%;
	/*font-variant: normal; */
	overflow: hidden;
}

pre {
 white-space: pre-wrap;       /* css-3 */
 white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
 white-space: -pre-wrap;      /* Opera 4-6 */
 white-space: -o-pre-wrap;    /* Opera 7 */
 word-wrap: break-word;       /* Internet Explorer 5.5+ */
 overflow:hidden;
}

.english {
	font-size: 1.2vw;
	text-align: left;
	color: #2B0316;
	font-family: "open_sansregular";
	text-decoration: none;
	font-weight: 500;
	line-height: 110%;
	letter-spacing: 105%;
	/*font-variant: normal; */
	overflow: hidden;
}

/* Lightbox style */

#lightbox {
    position:fixed; /* keeps the lightbox window in the current viewport */
    top:0; 
    left:0; 
    width:100%; 
    height:100%; 
    /* background:url(overlay.png) repeat; */
    background: rgba(0,0,0,.7);
    /*text-align:center;*/
   	z-index: 9999;
}

#lightbox p {
    text-align:right; 
    color:#fff; 
    margin-right:20px; 
    font-size:12px; 
}

#imagecontainer img {
    box-shadow:0 0 25px #111;
    max-width: 100%;
	max-height: 100%;
	display: block;
	vertical-align: middle;
	float: right;
	margin-right: 3%;
	
}

#imagecontainer {
	position: relative;
	float: left;
	display: block;
	width: 78%;
	height: 100%;
	text-align: right;
}

#imagedesc {
	position: relative;
	float: left;
	display: block;
	width: 18%;
	height: 100%;
	margin-right: 2%;
}

#imagedesc h1 {
	text-decoration: none;
	color: white;
	text-align: center;
	font-size: 4vw;
	font-family: "kruti_dev_700normal";
}

#imagedesc h3 {
	text-decoration: none;
	color: white;
	text-align: left;
	font-size: 2vw;
	font-family: "kruti_dev_010regular"
}

/* End of lightbox style */

